--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <!-- <title>Tea House - Tea Shop Website Template</title> -->
+  <title>Tea Cup Cafe</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -43,11 +43,11 @@
 
 
   <!-- Navbar Start -->
-  <div class="container-fluid bg-white sticky-top">
+  <div class="container-fluid bg-dark sticky-top">
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-white navbar-light">
+      <nav class="navbar navbar-expand-lg bg-dark navbar-light">
         <a href="index.html" class="navbar-brand">
-          <img class="" src="img/1705401845279-Standard.png" alt="Logo" width="100px" />
+          <img class="" src="img/teacup/logo.png" alt="Logo" width="100px" />
         </a>
         <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
           data-bs-target="#navbarCollapse">
@@ -57,7 +57,7 @@
           <div class="navbar-nav ms-auto">
             <a href="index.html" class="nav-item nav-link  pe-5">Home</a>
             <a href="about.html" class="nav-item nav-link active pe-5">About</a>
-            <a href="product.html" class="nav-item nav-link pe-5">Products</a>
+            <a href="item.html" class="nav-item nav-link pe-5">Tea & Sncaks Items</a>
             <a href="contact.html" class="nav-item nav-link pe-5">Contact</a>
           </div>
         </div>
@@ -70,7 +70,7 @@
   <!-- Page Header Start -->
   <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container text-center py-5">
-      <h1 class="display-2 text-dark mb-4 animated slideInDown">About Us</h1>
+      <h1 class="display-2 text-light mb-4 animated slideInDown">About Us</h1>
 
     </div>
   </div>
@@ -80,57 +80,69 @@
   <!-- About Start -->
   <div class="container-xxl py-5">
     <div class="container">
-      <div class="row g-5">
-        <div class="col-lg-6">
-          <div class="row g-3">
-            <div class="col-6 text-end">
-              <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/img-1.jpeg" alt="" />
-              <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/img-2.jpeg" alt="" />
+        <div class="row g-5">
+            <!-- First row: First column - Images, Second column - Content -->
+            <div class="col-lg-6">
+                <div class="row g-3">
+                    <div class="col-6 text-end">
+                        <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/teacup/abt5.webp" alt="" />
+                        <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/teacup/slider1.jpg" alt="" />
+                    </div>
+                    <div class="col-6">
+                        <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/teacup/abt1.jpg" alt="" />
+                        <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/teacup/abt-2.jpg" alt="" />
+                    </div>
+                </div>
             </div>
-            <div class="col-6">
-              <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/img-3.jpeg" alt="" />
-              <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/img-4.jpeg" alt="" />
+
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="section-title">
+                    <p class="fs-5 fw-medium fst-italic text-primary">About Us</p>
+                    <h1 class="display-6">The success history of <br>TEA CUP & SNACKS CAFE</h1>
+                </div>
+                <div class="row g-3 mb-4">
+                    <div class="col-sm-12">
+                        <h5>
+                            Our Tea and Snacks are some of the most popular treats, enjoyed by people around the world.
+                        </h5>
+                        <p class="mb-0">
+                            Welcome to Tea Cup & Snacks Cafe, where every sip of tea and every bite of snack tells a story of warmth, flavor, and quality. Our cafe is designed to offer a delightful experience that combines the finest teas with carefully selected snacks, providing a perfect retreat for anyone seeking comfort and taste in one place.
+                        </p>
+                        <p>
+                            At Tea Cup & Snacks Cafe, we don’t just serve tea; we bring you a selection of premium brews ranging from traditional masala chai to refreshing herbal infusions. Each cup is brewed with love, ensuring a perfect blend of flavors with every sip.               
+                        </p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-          <div class="section-title">
-            <p class="fs-5 fw-medium fst-italic text-primary">About Us</p>
-            <h1 class="display-6">The success history of PRISCA</h1>
-          </div>
-          <div class="row g-3 mb-4">
-            <div class="col-sm-4">
-              <img class="img-fluid bg-white w-100" src="img/img-6.jpeg" alt="" />
+
+        <div class="row g-5">
+            <!-- Second row: First column - Content, Second column - Images -->
+            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+                <div class="row g-3">
+                    <div class="col-sm-12">
+                        <h5>Daily tea and snacks provide a delightful boost of energy and flavor.</h5>
+                        <p class="mb-0">But it doesn’t stop there—our snacks are crafted to complement the teas perfectly. From crispy samosas to mouth-watering cookies, every snack is made fresh and served with care. Our snacks not only satisfy your taste buds but are a great pairing for a relaxing tea break.</p>
+                        <p>Whether you're seeking a quick pick-me-up or a place to unwind with friends, Tea Cup & Snacks Cafe offers a welcoming space to enjoy the best teas and snacks, all in one place.</p>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-8">
-              <h5>
-                Our Peanut Crunchy Bars is one of the most popular sweet in
-                the world
-              </h5>
-              <p class="mb-0">
-                candy made from peanuts and jaggery. It can be eaten alone or
-                with snacks and is a perfect replacement for chocolates.
-              </p>
+
+            <div class="col-lg-6">
+                <div class="row g-3">
+                    <div class="col-6 text-end">
+                        <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/teacup/abt4.webp" alt="" />
+                        <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/teacup/abt-2.jpg" alt="" />
+                    </div>
+                    <div class="col-6">
+                        <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/teacup/slider2.jpg" alt="" />
+                        <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/teacup/abt-5.webp" alt="" />
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="border-top mb-4"></div>
-          <div class="row g-3">
-            <div class="col-sm-8">
-              <h5>Daily use of a eat Peanut is good for your health</h5>
-              <p class="mb-0">
-                Chikki isn't just an ordinary Indian sweet. It's a powerhouse of vital vitamins and minerals. Peanuts,
-                the primary ingredient in most Chikkis, are high in protein, healthy fats, and fibre. Plus, they offer
-                vitamins and minerals like Vitamin E, B3, B6, folate, magnesium, and more.
-              </p>
-            </div>
-            <div class="col-sm-4">
-              <img class="img-fluid bg-white w-100" src="img/img-7.jpeg" alt="" />
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
   <!-- About End -->
 
 
@@ -138,63 +150,37 @@
   <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
       <div class="row g-5">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-6 col-md-6">
           <h4 class="text-primary mb-4">Our Office</h4>
-          <p class="mb-2">
-            <i class="fa fa-map-marker-alt text-primary me-3"></i>AADHAVAN CANDIES,
-            Puliyadi,Vadasery,<br>
-            Nagercoil-629 001,<br>
-            k.k Dist,Tamilnadu,South India
+          <p class="mb-2 d-flex text-white">
+            <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup & Snacks Cafe,<br>
+            Ballavara, Kemmanugundi main road, Chikmagalur 577129
           </p>
-          <p class="mb-2">
+          <p class="mb-2 d-flex">
             <i class="fa fa-phone-alt text-primary me-3"></i>
-            <a href="tel:+91" target="_blank">9514131414</a>
+            <span>
+              <a href="tel:+917760320428" target="_blank" class="text-white">+91 77603 20428</a><br>
+            </span>
           </p>
           <p class="mb-2">
             <i class="fa fa-envelope text-primary me-3"></i>
-            <a href="mailto:" target="_blank">info@aadhavancandies.com</a>
+            <a href="mailto:" target="_blank"
+              class="text-white"> </a>
           </p>
           <div class="d-flex pt-3">
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-square btn-primary rounded-circle me-2" href=""
+              target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <!-- <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-youtube"></i></a> -->
+            <a class="btn btn-square btn-primary rounded-circle me-2"
+              href="" target="_blank"><i
+                class="fab fa-instagram"></i></a>
           </div>
         </div>
-        <!-- <div class="col-lg-3 col-md-6">
-          <h4 class="text-primary mb-4">Quick Links</h4>
-          <a class="btn btn-link" href="">About Us</a>
-          <a class="btn btn-link" href="">Contact Us</a>
-          <a class="btn btn-link" href="">Our Services</a>
-          <a class="btn btn-link" href="">Terms & Condition</a>
-          <a class="btn btn-link" href="">Support</a>
-        </div> -->
         <div class="col-lg-3 col-md-6">
           <h4 class="text-primary mb-4">Business Hours</h4>
-          <p class="mb-1">Monday - Friday</p>
-          <h6 class="text-light">09:00 am - 07:00 pm</h6>
-          <p class="mb-1">Saturday</p>
-          <h6 class="text-light">09:00 am - 12:00 pm</h6>
-          <p class="mb-1">Sunday</p>
-          <h6 class="text-light">Closed</h6>
+          <p class="mb-1">Monday - Sunday</p>
+          <h6 class="text-light">06:00 am - 10:00 pm</h6>
         </div>
-        <!-- <div class="col-lg-3 col-md-6">
-          <h4 class="text-primary mb-4">Newsletter</h4>
-          <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-          <div class="position-relative w-100">
-            <input
-              class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-              type="text"
-              placeholder="Your email"
-            />
-            <button
-              type="button"
-              class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
-            >
-              SignUp
-            </button>
-          </div>
-        </div> -->
       </div>
     </div>
   </div>
@@ -221,7 +207,7 @@
   <!-- Copyright End -->
 
   <!-- Back to Top -->
-  <a href="https://wa.me/" class="fab-whatsapp" target="_blank">
+  <a href="https://wa.me/+917760320428" class="fab-whatsapp" target="_blank">
 		<img src="img/whatsapp.svg" alt="WhatsApp icon" /></a>
   <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
