--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Template</title>
+  <title>Tea Cup Cafe</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -43,11 +43,11 @@
 
 
   <!-- Navbar Start -->
-  <div class="container-fluid bg-white sticky-top">
+  <div class="container-fluid bg-dark sticky-top">
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg bg-white navbar-light">
+      <nav class="navbar navbar-expand-lg bg-dark navbar-light">
         <a href="index.html" class="navbar-brand">
-          <img class="" src="img/1705401845279-Standard.png" alt="Logo" width="100px" />
+          <img class="" src="img/teacup/logo.png" alt="Logo" width="100px" />
         </a>
         <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
           data-bs-target="#navbarCollapse">
@@ -57,7 +57,7 @@
           <div class="navbar-nav ms-auto">
             <a href="index.html" class="nav-item nav-link pe-5">Home</a>
             <a href="about.html" class="nav-item nav-link pe-5">About</a>
-            <a href="product.html" class="nav-item nav-link pe-5">Products</a>
+            <a href="item.html" class="nav-item nav-link pe-5">Tea & Sncaks Items</a>
             <a href="contact.html" class="nav-item nav-link active pe-5">Contact</a>
           </div>
         </div>
@@ -70,7 +70,7 @@
   <!-- Page Header Start -->
   <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container text-center py-5">
-      <h1 class="display-2 text-dark mb-4 animated slideInDown">Contact Us</h1>
+      <h1 class="display-2 text-light mb-4 animated slideInDown">Contact Us</h1>
 
     </div>
   </div>
@@ -97,20 +97,21 @@
               <div class="btn-square mx-auto mb-3">
                 <i class="fa fa-envelope fa-2x text-white"></i>
               </div>
-              <p class="mb-2">info@aadhavancandies.com</p>
+              <p class="mb-2"> <a href="mailto:" target="_blank"
+                class="text-dark"> </a></p>
             </div>
             <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
               <div class="btn-square mx-auto mb-3">
                 <i class="fa fa-phone fa-2x text-white"></i>
               </div>
-              <p class="mb-2">9514131414</p>
+              <p class="mb-2"> <a href="tel:+917760320428" target="_blank" class="text-dark">+91 77603 20428</a></p>
             </div>
             <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.5s">
               <div class="btn-square mx-auto mb-3">
                 <i class="fa fa-map-marker-alt fa-2x text-white"></i>
               </div>
-              <p class="mb-2">Puliyadi,Vadasery,</p>
-              <p class="mb-0">Nagercoil-629 001</p>
+              <p class="mb-2">Tea Cup & Snacks Cafe,</p>
+              <p class="mb-0">Ballavara, Kemmanugundi main road, Chikmagalur 577129</p>
             </div>
           </div>
         </div>
@@ -137,27 +138,30 @@
   <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
       <div class="row g-5">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-6 col-md-6">
           <h4 class="text-primary mb-4">Our Office</h4>
-          <p class="mb-2">
-            <i class="fa fa-map-marker-alt text-primary me-3"></i>AADHAVAN CANDIES,
-            Puliyadi,Vadasery,<br>
-            Nagercoil-629 001,<br>
-            k.k Dist,Tamilnadu,South India
+          <p class="mb-2 d-flex text-white">
+            <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup & Snacks Cafe,<br>
+            Ballavara, Kemmanugundi main road, Chikmagalur 577129
           </p>
-          <p class="mb-2  d-flex">
+          <p class="mb-2 d-flex">
             <i class="fa fa-phone-alt text-primary me-3"></i>
-            <a href="tel:+91" target="_blank" class="">9514131414</a>
+            <span>
+              <a href="tel:+917760320428" target="_blank" class="text-white">+91 77603 20428</a><br>
+            </span>
           </p>
           <p class="mb-2">
             <i class="fa fa-envelope text-primary me-3"></i>
-            <a href="mailto:" target="_blank">info@aadhavancandies.com</a>
+            <a href="mailto:" target="_blank"
+              class="text-white"> </a>
           </p>
           <div class="d-flex pt-3">
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a class="btn btn-square btn-primary rounded-circle me-2" href=""
+              target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <!-- <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-youtube"></i></a> -->
+            <a class="btn btn-square btn-primary rounded-circle me-2"
+              href="" target="_blank"><i
+                class="fab fa-instagram"></i></a>
           </div>
         </div>
         <!-- <div class="col-lg-3 col-md-6">
@@ -170,12 +174,8 @@
         </div> -->
         <div class="col-lg-3 col-md-6">
           <h4 class="text-primary mb-4">Business Hours</h4>
-          <p class="mb-1">Monday - Friday</p>
-          <h6 class="text-light">09:00 am - 07:00 pm</h6>
-          <p class="mb-1">Saturday</p>
-          <h6 class="text-light">09:00 am - 12:00 pm</h6>
-          <p class="mb-1">Sunday</p>
-          <h6 class="text-light">Closed</h6>
+          <p class="mb-1">Monday - Sunday</p>
+          <h6 class="text-light">06:00 am - 10:00 pm</h6>
         </div>
         <!-- <div class="col-lg-3 col-md-6">
           <h4 class="text-primary mb-4">Newsletter</h4>
@@ -220,7 +220,7 @@
   <!-- Copyright End -->
 
   <!-- Back to Top -->
-  <a href="https://wa.me/" class="fab-whatsapp" target="_blank">
+  <a href="https://wa.me/+917760320428" class="fab-whatsapp" target="_blank">
 		<img src="img/whatsapp.svg" alt="WhatsApp icon" /></a>
   <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
