--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tea Cup Cafe</title>
+  <title>Tea Cup</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -31,6 +31,8 @@
 
   <!-- Template Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -57,7 +59,8 @@
           <div class="navbar-nav ms-auto">
             <a href="index.html" class="nav-item nav-link  pe-5">Home</a>
             <a href="about.html" class="nav-item nav-link active pe-5">About</a>
-            <a href="item.html" class="nav-item nav-link pe-5">Tea & Sncaks Items</a>
+            <a href="item.html" class="nav-item nav-link pe-5">Our Drinks Items</a>
+            <a href="snacks.html" class="nav-item nav-link pe-5">Our Snacks Items</a>
             <a href="contact.html" class="nav-item nav-link pe-5">Contact</a>
           </div>
         </div>
@@ -77,72 +80,89 @@
   <!-- Page Header End -->
 
 
-  <!-- About Start -->
-  <div class="container-xxl py-5">
+   <!-- About Start -->
+   <div class="container-xxl py-5">
     <div class="container">
-        <div class="row g-5">
-            <!-- First row: First column - Images, Second column - Content -->
-            <div class="col-lg-6">
-                <div class="row g-3">
-                    <div class="col-6 text-end">
-                        <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/teacup/abt5.webp" alt="" />
-                        <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/teacup/slider1.jpg" alt="" />
-                    </div>
-                    <div class="col-6">
-                        <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/teacup/abt1.jpg" alt="" />
-                        <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/teacup/abt-2.jpg" alt="" />
-                    </div>
-                </div>
+      <div class="row g-5">
+        <!-- First row: First column - Images, Second column - Content -->
+        <div class="col-lg-6">
+          <div class="row g-3">
+            <div class="col-6 text-end">
+              <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s"
+                src="img/teacup/about/abt (1).jpeg" alt="" />
+              <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.2s" src="img/teacup/about/abt (3).jpeg"
+                alt="" />
             </div>
-
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                <div class="section-title">
-                    <p class="fs-5 fw-medium fst-italic text-primary">About Us</p>
-                    <h1 class="display-6">The success history of <br>TEA CUP & SNACKS CAFE</h1>
-                </div>
-                <div class="row g-3 mb-4">
-                    <div class="col-sm-12">
-                        <h5>
-                            Our Tea and Snacks are some of the most popular treats, enjoyed by people around the world.
-                        </h5>
-                        <p class="mb-0">
-                            Welcome to Tea Cup & Snacks Cafe, where every sip of tea and every bite of snack tells a story of warmth, flavor, and quality. Our cafe is designed to offer a delightful experience that combines the finest teas with carefully selected snacks, providing a perfect retreat for anyone seeking comfort and taste in one place.
-                        </p>
-                        <p>
-                            At Tea Cup & Snacks Cafe, we don’t just serve tea; we bring you a selection of premium brews ranging from traditional masala chai to refreshing herbal infusions. Each cup is brewed with love, ensuring a perfect blend of flavors with every sip.               
-                        </p>
-                    </div>
-                </div>
+            <div class="col-6">
+              <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.3s"
+                src="img/teacup/about/abt (4).jpeg" alt="" />
+              <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/teacup/about/abt (2).jpeg"
+                alt="" />
             </div>
+          </div>
         </div>
 
-        <div class="row g-5">
-            <!-- Second row: First column - Content, Second column - Images -->
-            <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                <div class="row g-3">
-                    <div class="col-sm-12">
-                        <h5>Daily tea and snacks provide a delightful boost of energy and flavor.</h5>
-                        <p class="mb-0">But it doesn’t stop there—our snacks are crafted to complement the teas perfectly. From crispy samosas to mouth-watering cookies, every snack is made fresh and served with care. Our snacks not only satisfy your taste buds but are a great pairing for a relaxing tea break.</p>
-                        <p>Whether you're seeking a quick pick-me-up or a place to unwind with friends, Tea Cup & Snacks Cafe offers a welcoming space to enjoy the best teas and snacks, all in one place.</p>
-                    </div>
-                </div>
+        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="section-title">
+            <p class="fs-5 fw-medium fst-italic text-primary">About Us</p>
+            <h1 class="display-6">The success history of TEA CUP</h1>
+          </div>
+          <div class="row g-3 mb-4">
+            <div class="col-sm-12">
+              <h5>
+                Our Tea and Snacks are some of the most popular treats, enjoyed by people around the world.
+              </h5>
+              <p class="mb-0">
+                <b>Welcome to Tea Cup</b>,tea & sncaks cafe where every sip of tea and every bite of snack tells a story
+                of warmth, flavor, and quality. Our cafe is designed to offer a delightful experience that combines the
+                finest teas with carefully selected snacks, providing a perfect retreat for anyone seeking comfort and
+                taste in one place.
+              </p>
+              <p>
+                At <b>Tea Cup </b>tea & snacks cafe, we don’t just serve tea; we bring you a selection of premium brews
+                ranging from traditional masala chai to refreshing herbal infusions. Each cup is brewed with love,
+                ensuring a perfect blend of flavors with every sip.
+              </p>
             </div>
-
-            <div class="col-lg-6">
-                <div class="row g-3">
-                    <div class="col-6 text-end">
-                        <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s" src="img/teacup/abt4.webp" alt="" />
-                        <img class="img-fluid bg-white w-50 wow fadeIn" data-wow-delay="0.2s" src="img/teacup/abt-2.jpg" alt="" />
-                    </div>
-                    <div class="col-6">
-                        <img class="img-fluid bg-white w-50 mb-3 wow fadeIn" data-wow-delay="0.3s" src="img/teacup/slider2.jpg" alt="" />
-                        <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/teacup/abt-5.webp" alt="" />
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
+
+      <div class="row g-5 mt-5">
+        <!-- Second row: First column - Content, Second column - Images -->
+        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="row g-3">
+            <div class="col-sm-12">
+              <h5>Daily tea and snacks provide a delightful boost of energy and flavor.</h5>
+              <p class="mb-0">But it doesn’t stop there—our snacks are crafted to complement the teas perfectly. From
+                crispy samosas to mouth-watering cookies, every snack is made fresh and served with care. Our snacks not
+                only satisfy your taste buds but are a great pairing for a relaxing tea break.</p>
+              <p>Whether you're seeking a quick pick-me-up or a place to unwind with friends, Tea Cup & Snacks Cafe
+                offers a welcoming space to enjoy the best teas and snacks, all in one place.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="row g-3">
+            <div class="col-6 text-end">
+              <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.1s"
+                src="img/teacup/strawbery.jpg" alt="" />
+              <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.2s" src="img/teacup/blue-moji.jpg"
+                alt="" />
+            </div>
+            <div class="col-6">
+              <img class="img-fluid bg-white w-100 mb-3 wow fadeIn" data-wow-delay="0.3s"
+                src="img/teacup/f3.jpg" alt="" />
+              <img class="img-fluid bg-white w-100 wow fadeIn" data-wow-delay="0.4s" src="img/teacup/mo2.jpg"
+                alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+
   <!-- About End -->
 
 
@@ -153,8 +173,8 @@
         <div class="col-lg-6 col-md-6">
           <h4 class="text-primary mb-4">Our Office</h4>
           <p class="mb-2 d-flex text-white">
-            <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup & Snacks Cafe,<br>
-            Ballavara, Kemmanugundi main road, Chikmagalur 577129
+            <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup<br>Tea & Snacks Cafe, <br>
+            Ballavara, Kemmanugundi main road,  Chikmagalur - 577 129
           </p>
           <p class="mb-2 d-flex">
             <i class="fa fa-phone-alt text-primary me-3"></i>
