--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tea Cup Cafe</title>
+  <title>Tea Cup</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -31,6 +31,8 @@
 
   <!-- Template Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -57,7 +59,8 @@
           <div class="navbar-nav ms-auto">
             <a href="index.html" class="nav-item nav-link pe-5">Home</a>
             <a href="about.html" class="nav-item nav-link pe-5">About</a>
-            <a href="item.html" class="nav-item nav-link pe-5">Tea & Sncaks Items</a>
+            <a href="item.html" class="nav-item nav-link pe-5">Our Drinks Items</a>
+            <a href="snacks.html" class="nav-item nav-link pe-5">Our Snacks Items</a>
             <a href="contact.html" class="nav-item nav-link active pe-5">Contact</a>
           </div>
         </div>
@@ -111,7 +114,7 @@
                 <i class="fa fa-map-marker-alt fa-2x text-white"></i>
               </div>
               <p class="mb-2">Tea Cup & Snacks Cafe,</p>
-              <p class="mb-0">Ballavara, Kemmanugundi main road, Chikmagalur 577129</p>
+              <p class="mb-0">Ballavara, Kemmanugundi main road,  Chikmagalur - 577 129</p>
             </div>
           </div>
         </div>
@@ -141,8 +144,8 @@
         <div class="col-lg-6 col-md-6">
           <h4 class="text-primary mb-4">Our Office</h4>
           <p class="mb-2 d-flex text-white">
-            <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup & Snacks Cafe,<br>
-            Ballavara, Kemmanugundi main road, Chikmagalur 577129
+            <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup<br>Tea & Snacks Cafe, <br>
+            Ballavara, Kemmanugundi main road,  Chikmagalur - 577 129
           </p>
           <p class="mb-2 d-flex">
             <i class="fa fa-phone-alt text-primary me-3"></i>
@@ -177,6 +180,9 @@
           <p class="mb-1">Monday - Sunday</p>
           <h6 class="text-light">06:00 am - 10:00 pm</h6>
         </div>
+        <!-- <div class="col-lg-3 col-md-6">
+         <img src="img/teacup/about/banner.jpeg">
+        </div> -->
         <!-- <div class="col-lg-3 col-md-6">
           <h4 class="text-primary mb-4">Newsletter</h4>
           <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
