--- a/contact.html
+++ b/contact.html
@@ -100,8 +100,7 @@
               <div class="btn-square mx-auto mb-3">
                 <i class="fa fa-envelope fa-2x text-white"></i>
               </div>
-              <p class="mb-2"> <a href="mailto:" target="_blank"
-                class="text-dark"> </a></p>
+              <p class="mb-2"> <a href="mailto:" target="_blank" class="text-dark"> </a></p>
             </div>
             <div class="col-md-4 text-center wow fadeInUp" data-wow-delay="0.4s">
               <div class="btn-square mx-auto mb-3">
@@ -114,7 +113,7 @@
                 <i class="fa fa-map-marker-alt fa-2x text-white"></i>
               </div>
               <p class="mb-2">Tea Cup & Snacks Cafe,</p>
-              <p class="mb-0">Ballavara, Kemmanugundi main road,  Chikmagalur - 577 129</p>
+              <p class="mb-0">Ballavara, Kemmanugundi main road, Chikmagalur - 577 129</p>
             </div>
           </div>
         </div>
@@ -123,13 +122,16 @@
   </div>
   <!-- Contact End -->
 
- <!-- location start -->
+  <!-- location start -->
   <div class="contact-location">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-lg-12">
           <div class="map-div">
-           
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31029.681616022885!2d75.74340459684723!3d13.553360856339026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbae1003e5c16af%3A0xb85d9b6e723585a4!2sTEA%20CUP%20tea%20%26%20snacks%20cafe!5e0!3m2!1sen!2sin!4v1739939369103!5m2!1sen!2sin"
+              width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
@@ -145,7 +147,7 @@
           <h4 class="text-primary mb-4">Our Office</h4>
           <p class="mb-2 d-flex text-white">
             <i class="fa fa-map-marker-alt text-primary me-3"></i>Tea Cup<br>Tea & Snacks Cafe, <br>
-            Ballavara, Kemmanugundi main road,  Chikmagalur - 577 129
+            Ballavara, Kemmanugundi main road, Chikmagalur - 577 129
           </p>
           <p class="mb-2 d-flex">
             <i class="fa fa-phone-alt text-primary me-3"></i>
@@ -155,15 +157,13 @@
           </p>
           <p class="mb-2">
             <i class="fa fa-envelope text-primary me-3"></i>
-            <a href="mailto:" target="_blank"
-              class="text-white"> </a>
+            <a href="mailto:" target="_blank" class="text-white"> </a>
           </p>
           <div class="d-flex pt-3">
-            <a class="btn btn-square btn-primary rounded-circle me-2" href=""
-              target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i
+                class="fab fa-facebook-f"></i></a>
             <!-- <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i class="fab fa-youtube"></i></a> -->
-            <a class="btn btn-square btn-primary rounded-circle me-2"
-              href="" target="_blank"><i
+            <a class="btn btn-square btn-primary rounded-circle me-2" href="" target="_blank"><i
                 class="fab fa-instagram"></i></a>
           </div>
         </div>
@@ -227,7 +227,7 @@
 
   <!-- Back to Top -->
   <a href="https://wa.me/+917760320428" class="fab-whatsapp" target="_blank">
-		<img src="img/whatsapp.svg" alt="WhatsApp icon" /></a>
+    <img src="img/whatsapp.svg" alt="WhatsApp icon" /></a>
   <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
   <!-- JavaScript Libraries -->
