--- a/index.html
+++ b/index.html
@@ -441,7 +441,10 @@
       <div class="row justify-content-center">
         <div class="col-lg-12">
           <div class="map-div">
-
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31029.681616022885!2d75.74340459684723!3d13.553360856339026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbae1003e5c16af%3A0xb85d9b6e723585a4!2sTEA%20CUP%20tea%20%26%20snacks%20cafe!5e0!3m2!1sen!2sin!4v1739939369103!5m2!1sen!2sin"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
